# Noteknock

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  handoff.md  opencode.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_notes_tags.py  0003_create_recall_items.py  0004_create_quizzes.py  0005_create_attachments.py
backend/app/: config.py  main.py
backend/app/api/: activity.py  attachments.py  auth.py  notes.py  quiz.py  recall.py
backend/app/core/: deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: attachment.py  note.py  quiz.py  user.py
backend/app/schemas/: attachment.py  auth.py  note.py  quiz.py  recall.py
backend/app/services/: content.py  llm.py  oauth_google.py  quizgen.py  search.py  storage.py  streak.py  tags.py
backend/tests/: conftest.py  test_api_activity.py  test_api_attachments.py  test_api_auth.py  test_api_notes.py  test_api_quiz.py  test_api_recall.py  test_api_search.py  test_config.py  test_llm.py  test_models_attachment.py  test_models_note.py  test_models_quiz.py  test_models_user.py  test_oauth_google.py  test_quizgen.py  test_schemas_auth.py  test_schemas_note.py  test_security.py  test_services.py  test_storage.py  test_streak.py
design/: README.md
design/project/: StudyMap.dc.html
docs/plans/: 2026-06-23-noteknock-full-build.md  2026-06-25-landing-login-redesign-design.md  (+1 more)
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+76 files in other folders)
